--- a/app/assets/stylesheets/components/admin/c-flag-colors.scss
+++ b/app/assets/stylesheets/components/admin/c-flag-colors.scss
@@ -1,31 +1,89 @@
 .c-flag-colors {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  height: 100px;
+
+  > div {
+    position: relative;
+    flex-basis: 100%;
+    margin-right: 20px;
+
+    // We don't want the input to be shown but if we use "display: none;"
+    // Chrome won't fire the events, so we just remove it from the viewport
+    input[type="color"] {
+      position: absolute;
+      top: 0;
+      left: -10000px;
+    }
+
+    label {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      text-indent: -10000px;
+      cursor: pointer;
+      z-index: 1;
+
+      &:focus + .preview {
+        border: 2px solid $color-1;
+      }
+    }
+
+    .preview {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+
   .add-color {
-    width: 100px;
-    height: 44px;
-    border: 2px dashed $color-13;
-    border-radius: 4px;
-    background: transparent;
-    text-indent: -10000px; // We still need the text for accessibility
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border: 1px dashed $color-1;
+    background-color: transparent;
     cursor: pointer;
 
+    span {
+      flex-basis: 70px;
+      color: $color-1;
+      font-family: $font-family-1;
+      font-size: $font-size-normal;
+      font-weight: $font-weight-bold;
+      letter-spacing: .1px;
+      text-align: center;
+      text-transform: uppercase;
+    }
+
     &:focus {
-      border-color: $color-1;
+      background: $color-1;
+
+      span {
+        color: $color-3;
+      }
     }
   }
 
   .remove-color {
-    position: relative ;
-    top: -4px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
     width: 14px;
     height: 14px;
-    margin-right: 10px;
     border: 0;
     background: asset-url('icons/close-icon.svg') no-repeat center center;
     text-indent: -10000px; // For accessibility, we should keep the text
     cursor: pointer;
+    z-index: 2;
 
     &:focus {
-      outline: 2px solid $color-1;
+      border: 2px solid $color-1;
     }
   }
 }
