--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -94,6 +94,127 @@
     min-height: calc(100vh - 300px);
     padding-top: 50px;
 
+    .settings {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+
+      > div {
+        position: relative;
+
+        h3 {
+          margin-top: 0;
+          font-size: $font-size-normal;
+          text-transform: uppercase;
+        }
+
+        > label {
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          text-indent: -10000px;
+          cursor: pointer;
+          z-index: 1;
+
+          &:focus + .placeholder {
+            background: $color-1;
+
+            span {
+              color: $color-3;
+            }
+          }
+
+          &:focus + .preview {
+            border-color: $color-1;
+          }
+        }
+
+        input[type='file'] {
+          display: none;
+        }
+
+        .placeholder {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 100px;
+          border: 1px dashed $color-1;
+
+          &.-high {
+            height: 170px;
+          }
+
+          span {
+            flex-basis: 70px;
+            color: $color-1;
+            font-weight: $font-weight-bold;
+            letter-spacing: .1px;
+            text-align: center;
+            text-transform: uppercase;
+          }
+        }
+
+        > .preview {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 100px;
+          border: 1px solid $color-13;
+          background-color: $color-2;
+          background-position: center center;
+          background-size: cover;
+
+          &.-high {
+            height: 170px;
+          }
+
+          > img {
+            display: block;
+            max-width: 100%;
+            max-height: 100%;
+          }
+        }
+
+        .restrictions {
+          margin-top: 10px;
+          font-size: $font-size-small;
+        }
+      }
+
+      > .logo {
+        flex-basis: calc(25% - 15px);
+        margin-right: 20px;
+      }
+
+      > .icon {
+        flex-basis: calc(25% - 15px);
+        margin-right: 20px;
+      }
+
+      > .flag-colors {
+        flex-basis: calc(50% - 10px);
+      }
+
+      > hr {
+        flex-basis: 100%;
+        margin: 55px 0;
+      }
+
+      > .homepage-cover {
+        flex-basis: calc(50% - 10px);
+        margin-right: 20px;
+      }
+
+      > .content-cover {
+        flex-basis: calc(50% - 10px);
+      }
+    }
+
     .c-centered-input {
       justify-content: space-between;
       width: 400px;
