--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -29,8 +29,18 @@
   &.-style {
     display: flex;
     align-items: center;
+    max-width: 780px;
     min-height: calc(100vh - 300px);
+    margin: 0 auto;
     padding-top: 50px;
+
+    > .wrapper {
+      padding: 0;
+    }
+
+    hr {
+      margin: 50px 0;
+    }
 
     .templates {
       display: flex;
@@ -45,12 +55,10 @@
           position: absolute;
           left: -1000px;
 
-          &:not(:checked) + .content {
-            opacity: .3;
-          }
-
-          &:focus + .content img{
-            border-color: $color-1;
+          &:checked + .content {
+            &::before {
+              opacity: 1;
+            }
           }
         }
 
@@ -65,25 +73,78 @@
           cursor: pointer;
           z-index: 1; // Required to be positioned on top
 
-          &:hover + input + .content {
-            opacity: 1;
+          &:focus + input + .content img {
+            border: 2px solid $color-1;
           }
         }
 
         .content {
-          transition: .3s opacity;
+          position: relative;
+
+          &::before {
+            position: absolute;
+            top: 25px;
+            left: 0;
+            width: 100%;
+            height: calc(100% - 29px);
+            transition: opacity .3s;
+            border-radius: 4px;
+            background: asset-url('icons/large-check-icon.svg') no-repeat center center, rgba($color-1, .8);
+            content: '';
+            opacity: 0;
+          }
 
           img {
             border: 1px solid $color-13;
-            border-radius: 7px;
+            border-radius: 4px;
           }
 
           p {
-            margin: 7px 0 0;
+            margin: 0 0 7px;
             font-weight: $font-weight-bold;
             text-transform: uppercase;
           }
         }
+      }
+    }
+
+    .theme-color {
+      position: relative;
+      width: 160px;
+
+      p {
+        margin-bottom: 7px;
+        font-weight: $font-weight-bold;
+        text-transform: uppercase;
+      }
+
+      input {
+        // We don't want the input to be shown but if we use "display: none;"
+        // Chrome won't fire the events, so we just remove it from the viewport
+        position: absolute;
+        top: 0;
+        left: -10000px;
+      }
+
+      label {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-indent: -10000px;
+        cursor: pointer;
+
+        &:focus + .preview {
+          border: 2px solid $color-1;
+        }
+      }
+
+      .preview {
+        width: 160px;
+        height: 100px;
+        border: 1px solid $color-13;
       }
     }
   }
