Fixes issues with the table's paginator
* Fixes its visual aspect on Safari and Chrome
* Disables the arrows if can't be used to avoid confusion

--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -64,6 +64,7 @@
       padding: 0 24px 0 8px;
       background-color: lighten($color-1, 45%);
       font-size: $font-size-small;
+      line-height: 24px;
     }
   }
 }
