--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -289,6 +289,7 @@ $wysiwyg-lateral-padding: 105px;
       > img {
         display: block;
         max-width: 100%;
+        max-height: 600px;
         margin: 0 auto;
         border-radius: 4px;
       }
