--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="//cdn.quilljs.com/1.2.0/quill.bubble.css">
   <%= stylesheet_link_tag 'management/application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <script src="//cdn.quilljs.com/1.2.0/quill.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pica/2.0.8/pica.min.js" type="text/javascript"></script>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
 </head>
