--- a/app/assets/stylesheets/front/_settings-theme-fa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-fa.scss
@@ -55,6 +55,7 @@ $color-15:  #404040;
 $body-max-width:         1280px;
 $content-max-width:       750px;
 $media-max-width:        1060px;
+$image-ratio:            0.6666; // width * ratio = height
 $wrapper-padding:          30px;
 $wrapper-tablet-padding:   30px;
 $wrapper-mobile-padding:   15px;
