--- a/app/assets/javascripts/templates/management/wysiwyg-block-toolbar.hbs
+++ b/app/assets/javascripts/templates/management/wysiwyg-block-toolbar.hbs
@@ -1,3 +1,9 @@
+{{#if showSizeBtn}}
+  <button type="button" class="js-toggle-size">
+    <svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><title>scale-icon</title><path d="M8.586 10l-1.96-1.96-.707-.707L7.333 5.92l.707.707L10 8.586V6h2v6H6v-2h2.586zM0 1v5h2V3.414l1.96 1.96.707.707L6.08 4.667l-.707-.707L3.414 2H6V0H0v1z" fill="#FFF" fill-rule="evenodd"/></svg>
+    Toggle size
+  </button>
+{{/if}}
 {{#unless hideChangeBtn}}
   <button type="button" class="js-change">
     <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><title>edit-icon</title><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg>
