--- a/app/assets/stylesheets/front/_template-lsa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-lsa.css.scss.erb
@@ -3,13 +3,16 @@
 <% end %>
 
 
-@import
-'leaflet',
-'icons',
-'../layouts/shared/*',
-'../layouts/front/*',
-'../components/shared/**/*',
-'../components/front/**/*';
+//@import
+//'leaflet',
+//'icons',
+//'../layouts/shared/*',
+//'../layouts/front/*',
+//'../components/shared/**/*',
+//'../components/front/**/*';
+
+//$color-10: darken(saturate($color-1, 10%), 5%) default;
+//$background-color-1: rgba($color-1, .2) default;
 
 // Merriweather
 @font-face {
@@ -170,13 +173,13 @@ a {
   background-color: $color-1;
 }
 
-::selection {
-  background: $background-color-1;
-}
-
-::-moz-selection {
-  background: $background-color-1;
-}
+//::selection {
+//  background: $background-color-1;
+//}
+//
+//::-moz-selection {
+//  background: $background-color-1;
+//}
 
 // We hide the map header
 .app-header {
