--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.quilljs.com/1.1.6/quill.core.css">
   <%#= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if @site_page.site_template.name.eql? 'Forest Atlas' %>
   <%#= stylesheet_link_tag 'front/application-theme-lsa', media: 'all', 'data-turbolinks-track': 'reload' if @site_page.site_template.name.eql? 'Landscape Application' %>
-  <%= stylesheet_link_tag "#{@site.id}", media: 'all', 'data-turbolinks-track': 'reload'%>
+  <%= stylesheet_link_tag "front/sites/#{@site_page.site.id}.css", media: 'all', 'data-turbolinks-track': 'reload'%>
   <%= favicon_link_tag unless @favico %>
   <%= yield :head %>
   <script src="//cdn.quilljs.com/1.1.6/quill.js" type="text/javascript"></script>
