--- a/app/assets/stylesheets/front/_template-fa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-fa.css.scss.erb
@@ -4,6 +4,7 @@
 
 @import
 'leaflet',
+'../../app/assets/stylesheets/helpers',
 '../../app/assets/stylesheets/front/settings-theme-fa',
 '../../app/assets/stylesheets/front/base-theme-fa',
 '../../app/assets/stylesheets/layouts/shared/*',
