--- a/app/assets/stylesheets/components/shared/c-dashboard-bookmarks.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-bookmarks.scss
@@ -1,68 +1,115 @@
 .c-dashboard-bookmarks {
-  > header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px 0;
-  }
+  position: relative;
+  max-width: $media-max-width;
+  margin: 0 auto;
+  font-size: $font-size-small;
 
   h3 {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 0;
     margin: 0;
-    font-size: $font-size-x-normal;
-    font-weight: $font-weight-light;
-    line-height: 1.7;
+    transform: translateY(-50%);
+    font-size: inherit;
+    font-weight: $font-weight-normal;
   }
 
   > .bookmarks {
-    display: block;
-    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: calc(100% - 160px);
+    margin: 0 auto;
+    padding: 10px 0;
 
     > li {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 12px 15px;
-      border-bottom: 1px solid rgba($color-4, .1);
+      position: relative;
+      height: 27px;
+      margin-right: 100px;
+      line-height: 27px;
+      cursor: pointer;
+
+      &:last-of-type {
+        margin-right: 0;
+      }
 
       &.no-bookmark {
-        display: block;
-        width: 100%;
-        border-bottom-color: transparent;
         text-align: center;
         opacity: .5;
+      }
+
+      &.add-button button {
+        padding: 0;
+        border: 0;
+        background: transparent;
+        color: $color-1;
+        font-family: inherit;
+        font-size: inherit;
+        cursor: pointer;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+      }
+
+      &.-active,
+      &:hover,
+      &:focus {
+        > div {
+          display: block;
+        }
+      }
+
+      &.-no-active > div {
+        display: none;
+      }
+
+      > div {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: -40px;
+        width: calc(100% + 80px);
+        height: 100%;
+
+        > button {
+          width: 100%;
+          height: 100%;
+          padding: 0 40px;
+          border: 0;
+          border-radius: 100px;
+          background-color: $color-1;
+          color: $color-3;
+          font-family: inherit;
+          font-size: inherit;
+          cursor: pointer;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+        }
       }
     }
   }
 
-  .buttons {
-    flex-shrink: 0;
+  .floating-buttons {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    padding-left: 5px;
+    transform: translateX(100%);
 
     button {
       display: inline-block;
       position: relative;
-      margin: 0;
-      margin-left: 15px;
       padding: 0;
       transition: opacity .3s;
       border: 0;
       background-color: transparent;
       text-indent: -10000px; // We keep the text for accessibility matter
       cursor: pointer;
-      opacity: .3;
 
-      &:hover {
-        opacity: 1;
-
-        @if $theme == 1 {
-          path {
-            fill: $color-1;
-          }
-        }
-      }
-
-      &.-apply {
-        width: 16px;
-        height: 11px;
+      &.-edit {
+        width: 15px;
+        height: 15px;
+        margin-right: 5px;
       }
 
       &.-delete {
@@ -79,7 +126,7 @@
         height: 100%;
 
         path {
-          transition: fill .3s;
+          fill: $color-1;
         }
       }
     }
