--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -30,7 +30,7 @@
     height: 40px;
     padding: 0 37px 0 21px;
     border-radius: 100px;
-    background: transparent;
+    background-color: $color-16;
     color: $color-4;
     font-family: $font-family-1;
     font-size: $font-size-normal;
@@ -46,7 +46,14 @@
       text-transform: uppercase;
     } @else {
       border: 0;
-      background-color: rgba($color-1, .1);
+    }
+  }
+
+  &.-small {
+    > select {
+      height: 35px;
+      font-size: $font-size-small;
+      line-height: 30px;
     }
   }
 
@@ -62,7 +69,6 @@
     > select {
       height: 24px;
       padding: 0 24px 0 8px;
-      background-color: lighten($color-1, 45%);
       font-size: $font-size-small;
       line-height: 24px;
     }
