--- a/app/assets/stylesheets/front/_template-lsa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-lsa.css.scss.erb
@@ -5,6 +5,7 @@
 
 @import
 'leaflet',
+'../../app/assets/stylesheets/helpers',
 '../../app/assets/stylesheets/front/settings-theme-lsa',
 '../../app/assets/stylesheets/front/base-theme-lsa',
 '../../app/assets/stylesheets/layouts/shared/*',
