--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -50,6 +50,7 @@ $color-12: #dd3e21;
 $color-13: #dededd;
 $color-14:  #ff706c;
 $color-15:  #404040;
+$color-16: tint($color-1, 85%);
 
 // General layout
 $body-max-width:         1280px;
