--- a/app/assets/stylesheets/components/shared/c-chart-widget.scss
+++ b/app/assets/stylesheets/components/shared/c-chart-widget.scss
@@ -7,6 +7,10 @@
   }
 
   > .c-hierarchical-select {
-    margin-top: 20px;
+    margin-top: 10px;
+
+    @media #{$mq-tablet} {
+      margin-top: 20px;
+    }
   }
 }
