--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -29,11 +29,13 @@
       <div class="widget js-chart-1"></div>
       <div class="widget js-chart-2"></div>
     </div>
-  </div>
-  <hr/>
-  <div class="table js-table">
+
+    <hr/>
+    <div class="table js-table"></div>
   </div>
 </div>
+
+<%= render 'front/footer' %>
 
 <script type="text/javascript">
   window.route = 'Dashboard';
