--- a/app/assets/stylesheets/components/front/c-description-dashboard-modal.scss
+++ b/app/assets/stylesheets/components/front/c-description-dashboard-modal.scss
@@ -1,5 +1,13 @@
 .c-description-dashboard-modal {
-  padding: 55px;
+  padding: $wrapper-mobile-padding;
+
+  @media #{$mq-tablet} {
+    padding: $wrapper-tablet-padding;
+  }
+
+  @media #{$mq-laptop} {
+    padding: 55px;
+  }
 
   h1 {
     margin: 0 0 25px;
@@ -8,10 +16,18 @@
     font-weight: 700;
     line-height: 1;
 
-    @if $theme == 1 {
-      font-family: $font-family-2;
-    } @else {
+    @if $theme == 2 {
+      font-size: $font-size-x-big;
+      letter-spacing: .7px;
       text-transform: uppercase;
+    } @else {
+      font-family: $font-family-2;
+      font-size: $font-size-huge;
+      letter-spacing: 1.25px;
+
+      @media #{$mq-tablet} {
+        font-size: $font-size-x-huge;
+      }
     }
   }
 
