--- a/app/assets/stylesheets/components/shared/c-dashboard-bookmarks.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-bookmarks.scss
@@ -1,32 +1,81 @@
 .c-dashboard-bookmarks {
+  display: flex;
   position: relative;
+  align-items: center;
+  justify-content: space-between;
   max-width: $media-max-width;
   margin: 0 auto;
   font-size: $font-size-small;
 
+  &::before {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 63px;
+    width: 10px;
+    height: 100%;
+    background: linear-gradient(to right, $color-16 30%, rgba($color-16, 0));
+    content: '';
+    z-index: 1;
+  }
+
+  &::after {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 100%;
+    background: linear-gradient(to left, $color-16 30%, rgba($color-16, 0));
+    content: '';
+    z-index: 1;
+  }
+
+  @media #{$mq-tablet} {
+    display: block;
+
+    &::before,
+    &::after {
+      content: none;
+    }
+  }
+
   h3 {
     display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 0;
     margin: 0;
-    transform: translateY(-50%);
     font-size: inherit;
     font-weight: $font-weight-normal;
+
+    @media #{$mq-tablet} {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+    }
   }
 
   > .bookmarks {
     display: flex;
+    flex-grow: 1;
     align-items: center;
-    justify-content: center;
-    width: calc(100% - 160px);
+    justify-content: flex-start;
     margin: 0 auto;
-    padding: 10px 0;
+    padding: 10px 30px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+
+    @media #{$mq-tablet} {
+      justify-content: center;
+      width: calc(100% - 160px);
+      padding: 10px 0;
+    }
 
     > li {
       position: relative;
+      flex-shrink: 0;
       height: 27px;
-      margin-right: 100px;
+      margin-right: 70px;
       line-height: 27px;
       cursor: pointer;
 
@@ -34,12 +83,22 @@
         margin-right: 0;
       }
 
+      @media #{$mq-tablet} {
+        margin-right: 100px;
+      }
+
       &.no-bookmark {
+        display: none;
         text-align: center;
         opacity: .5;
+
+        @media #{$mq-tablet} {
+          display: block;
+        }
       }
 
       &.add-button button {
+        margin-right: 30px;
         padding: 0;
         border: 0;
         background: transparent;
@@ -49,6 +108,10 @@
         cursor: pointer;
         -webkit-appearance: none;
         -moz-appearance: none;
+
+        @media #{$mq-tablet} {
+          margin-right: 0;
+        }
       }
 
       &.-active,
@@ -67,14 +130,18 @@
         display: none;
         position: absolute;
         top: 0;
-        left: -40px;
-        width: calc(100% + 80px);
+        left: -20px;
+        width: calc(100% + 40px);
         height: 100%;
+
+        @media #{$mq-tablet} {
+          left: -40px;
+          width: calc(100% + 80px);
+        }
 
         > button {
           width: 100%;
           height: 100%;
-          padding: 0 40px;
           border: 0;
           border-radius: 100px;
           background-color: $color-1;
@@ -84,6 +151,10 @@
           cursor: pointer;
           -webkit-appearance: none;
           -moz-appearance: none;
+
+          @media #{$mq-tablet} {
+            padding: 0 40px;
+          }
         }
       }
     }
