--- a/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
+++ b/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
@@ -9,12 +9,16 @@ $secondary-container-initial-width: 400px;
 
   .description {
     max-width: $content-max-width;
-    margin: 45px auto 0;
+    margin: 30px auto 0;
     font-size: $font-size-x-normal;
     font-weight: $font-weight-light;
 
     @if $theme == 1 {
       line-height: 1.6;
+    }
+
+    @media #{$mq-tablet} {
+      margin: 45px auto 0;
     }
 
     button {
@@ -42,13 +46,13 @@ $secondary-container-initial-width: 400px;
     align-items: stretch;
     width: 100%;
     max-width: $content-max-width;
-    margin: 0 auto;
-    margin-top: 40px;
+    margin: 30px auto 0;
 
     @media #{$mq-tablet} {
       flex-direction: row;
       align-items: flex-start;
       height: 40px;
+      margin: 40px auto 0;
     }
 
     > *:not(:last-of-type) {
@@ -70,38 +74,70 @@ $secondary-container-initial-width: 400px;
 
     > .large-widget {
       flex-basis: 100%;
-      // The value below is from the defaults of chartWidgetView
+      // The factor below is from the defaults of chartWidgetView
       // Please make them coincide
-      height: #{$media-max-width * .5};
+      height: #{$breakpoint-mobile * .5};
       margin-bottom: 45px;
+
+      @media #{$mq-tablet} {
+        // The factor below is from the defaults of chartWidgetView
+        // Please make them coincide
+        height: #{$breakpoint-tablet * .5};
+      }
+
+      @media #{$mq-laptop} {
+        // The factor below is from the defaults of chartWidgetView
+        // Please make them coincide
+        height: #{$media-max-width * .5};
+      }
     }
 
     > .widget {
-      flex-basis: calc(50% - 30px);
+      flex-basis: 100%;
+      max-width: 100%; // Required for the widget's container calculations (_onResize)
+      margin-bottom: 45px;
+
+      @media #{$mq-tablet} {
+        flex-basis: calc(50% - 30px);
+        margin-bottom: 0;
+      }
     }
 
     // Target the first "small" widget
     > div:nth-of-type(2) {
       position: relative;
 
-      &::after {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: -30px;
-        width: 1px;
-        height: 100%;
-        background-color: $color-9;
-        content: '';
+      @media #{$mq-tablet} {
+        margin-bottom: 0;
+
+        &::after {
+          display: block;
+          position: absolute;
+          top: 0;
+          right: -30px;
+          width: 1px;
+          height: 100%;
+          background-color: $color-9;
+          content: '';
+        }
       }
+    }
+
+    // Target the last "small" widget
+    > div:last-of-type {
+      margin-bottom: 0;
     }
   }
 
   hr {
     max-width: $media-max-width;
-    margin: 60px auto;
+    margin: 50px auto;
     border: 0;
     border-top: 1px solid $color-9;
+
+    @media #{$mq-tablet} {
+      margin: 60px auto;
+    }
   }
 
   .table {
