--- a/app/assets/stylesheets/front/_base-theme-lsa.scss
+++ b/app/assets/stylesheets/front/_base-theme-lsa.scss
@@ -64,6 +64,15 @@ a {
   display: none;
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
 .turbolinks-progress-bar {
   background-color: $color-1;
 }
