--- a/app/assets/stylesheets/front/_template-fa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-fa.css.scss.erb
@@ -1,187 +1,12 @@
 <% variables.each do |property, value| %>
   $<%= property %>: <%= value %>;
 <% end %>
-//
-//@import
-//'leaflet',
-//'icons',
-//'../layouts/shared/*',
-//'../layouts/front/*',
-//'../components/shared/**/*',
-//'../components/front/**/*';
-//
-//@font-face {
-//  font-family: 'Fira Sans';
-//  font-weight: 300;
-//  src: font-url('fonts/FiraSansOT-Light.otf');
-//}
-//
-//@font-face {
-//  font-family: 'Fira Sans';
-//  font-weight: 400;
-//  src: font-url('fonts/FiraSansOT-Regular.otf');
-//}
-//
-//@font-face {
-//  font-family: 'Fira Sans';
-//  font-weight: 700;
-//  src: font-url('fonts/FiraSansOT-Medium.otf');
-//}
 
-//$color-10: darken(saturate($color-1, 10%), 5%) default;
-//$background-color-1: rgba($color-1, .2) default;
-
-// Font families
-$font-family-1: 'Fira Sans', sans-serif;
-
-// Font sizes
-$font-size-small:    12px;
-$font-size-normal:   14px;
-$font-size-s-normal: 15px;
-$font-size-x-normal: 19px;
-$font-size-medium:   21px;
-$font-size-big:      35px;
-$font-size-x-big:    40px;
-$font-size-huge:     47px;
-
-// Font weights
-$font-weight-light:  300;
-$font-weight-normal: 400;
-$font-weight-bold:   700;
-
-// Colors
-$color-1:  #97bd3d; // Theme main color
-$color-2:  #f7f7f7;
-$color-3:  #fff;
-$color-4:  #555;
-$color-5:  #000;
-$color-6:  #333;
-$color-7:  #3b3b3b;
-$color-8:  #f5f4f4;
-$color-9:  #eceaea;
-$color-10: darken(saturate($color-1, 10%), 5%);
-$color-11: #fff00e;
-$color-12: #dd3e21;
-$color-13: #dededd;
-
-// General layout
-$body-max-width:         1280px;
-$content-max-width:       750px;
-$media-max-width:        1060px;
-$wrapper-padding:          30px;
-$wrapper-tablet-padding:   30px;
-$wrapper-mobile-padding:   15px;
-
-// Breakpoints
-$breakpoint-mobile:  425px;
-$breakpoint-tablet:  768px;
-$breakpoint-laptop: 1024px;
-
-// Media queries
-$mq-mobile: 'screen and (min-width: #{$breakpoint-mobile})';
-$mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
-$mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
-
-$mq-body-width: 'screen and (min-width: #{$body-max-width})';
-
-// Theme
-$theme: 2;
-
-* {
-  box-sizing: border-box;
-
-  &::before,
-  &::after {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  max-width: $body-max-width;
-  color: $color-4;
-  font-family: $font-family-1;
-  font-size: $font-size-normal;
-  font-weight: $font-weight-normal;
-  line-height: 1.7;
-
-  @media #{$mq-body-width} {
-    margin: 0 auto;
-  }
-
-  &.-wide {
-    max-width: none;
-  }
-}
-
-ul {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-
-  > li {
-    display: inline-block;
-    list-style: none;
-  }
-}
-
-a {
-  // Do not set inline-block here otherwise the links will be forced to be on online line
-  padding: 0 3px;
-  color: currentColor;
-  text-decoration: none;
-  background-color: rgba($color-1, .2);
-}
-
-.wrapper {
-  width: 100%;
-  padding: 0 $wrapper-mobile-padding;
-
-  @media #{$mq-mobile} {
-    padding: 0 $wrapper-tablet-padding;
-  }
-
-  @media #{$mq-tablet} {
-    padding: 0 $wrapper-padding;
-  }
-}
-
-.is-hidden {
-  display: none;
-}
-
-.turbolinks-progress-bar {
-  background-color: $color-1;
-}
-
-//::selection {
-//  background: $background-color-1;
-//}
-//
-//::-moz-selection {
-//  background: $background-color-1;
-//}
-
-// We hide the map header
-.app-header {
-  display: none !important;
-}
-
-@media (max-width:950px) {
-  .map-container{
-    top: 55px !important;
-    position: fixed !important;
-  }
-}
-
-.tab-buttons__tab.mobile-show[data-value="MORE"] {
-  display: none !important;
-}
-
+@import
+'leaflet',
+'../../app/assets/stylesheets/front/settings-theme-fa',
+'../../app/assets/stylesheets/front/base-theme-fa',
+'../../app/assets/stylesheets/layouts/shared/*',
+'../../app/assets/stylesheets/layouts/front/*',
+'../../app/assets/stylesheets/components/shared/**/*',
+'../../app/assets/stylesheets/components/front/**/*';
